# workbench

./: .gitignore  Cargo.toml  PARALLEL_REPORT.md  README.md
assets/scripts/: term_size_test.sh
docs/plans/: 2026-02-20-config-window-design.md  2026-02-20-config-window-plan.md  2026-03-01-unified-help-window-design.md  2026-03-01-unified-help-window-plan.md  2026-03-03-command-palette-design.md  2026-03-03-command-palette-plan.md  2026-03-03-cost-tracking-design.md
src/: audio.rs  logger.rs  main.rs  persistence.rs  theme.rs
src/app/: action.rs  handler.rs  mod.rs  pty_ops.rs  runtime.rs  selection.rs  session_start.rs  state.rs  utilities.rs  workspace_nav.rs
src/app/handlers/: config.rs  input.rs  mod.rs  navigation.rs  parallel.rs  parallel_tests.rs  session.rs  session_worktree.rs  todo.rs  workspace.rs
src/app/state/: data.rs  file_browser.rs  mod.rs  system.rs  types.rs  ui.rs
src/config/: defaults.toml  keybindings.rs  mod.rs  user_config.rs
src/git/: mod.rs  worktree.rs
src/models/: agent.rs  mod.rs  parallel_task.rs  session.rs  todo.rs  workspace.rs
src/pty/: manager.rs  mod.rs
src/tui/: effects.rs  event.rs  mod.rs  replay.rs  ui.rs  utils.rs
src/tui/components/: banner.rs  command_palette.rs  config_window.rs  create_session_dialog.rs  create_workspace_dialog.rs  debug_overlay.rs  help_popup.rs  merge_confirm_modal.rs  mod.rs  output_pane.rs  parallel_merge_confirm_modal.rs  parallel_task_modal.rs  pinned_terminal_pane.rs  session_list.rs  session_pane.rs  status_bar.rs  terminal_view.rs  toast.rs  todos_pane.rs  utilities_pane.rs  workspace_action_dialog.rs  workspace_list.rs  workspace_name_dialog.rs
src/tui/event/: handlers.rs  key_modes.rs  mod.rs  shortcuts.rs
