[package]
name = "workbench"
version = "0.1.0"
edition = "2021"
description = "TUI for managing AI agent workspaces and sessions"
license = "MIT"

[[bin]]
name = "workbench"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# TUI framework
ratatui = { version = "0.30", features = ["unstable-widget-ref"] }
crossterm = "0.29"
tachyonfx = "0.22"

# PTY support (cross-platform)
portable-pty = "0.8"

# Terminal parsing for ANSI color support
vt100 = "0.15"

# Terminal widget for ratatui (proper terminal rendering)
tui-term = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["local-offset", "macros"] }

# UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"

# Directory utilities
dirs = "5.0"

# Async channels
futures = "0.3"

# Audio playback
rodio = "0.19"

# Random number generation
rand = "0.8"

# Regex for parsing
regex = "1.10"

# Clipboard support
arboard = "3.4"

# Text area widget for notepad (pinned to specific commit for stability)
# This is from 0xferrous/tui-textarea update-ratatui branch with ratatui 0.30 support
tui-textarea = { git = "https://github.com/0xferrous/tui-textarea", rev = "a5086767ee0831e319aec9432aaef495d8f280c4" }

[dev-dependencies]
tempfile = "3.9"
